# RAG

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.gemini/: settings.json
.gemini/commands/: commit-message.toml  todo.toml
interface_v1/: app.py  evaluator.py
interface_v1/data_sets/: README.md  config.yaml  examples.jsonl  generator.py  llm_client.py  loaders.py  main.py  prompts.py
interface_v1/evaluations/: evaluations.py  test_loader.py
interface_v1/implementation/: answer.py  ingest.py
interface_v1/pro_implementation/: answer.py  ingest.py
notebooks/: Notes.md
notebooks/chunking/: chunking-testing.ipynb
notebooks/embeddings/: embeddings-testing-pt2.ipynb  embeddings-testing.ipynb
notebooks/evaluations/: evals-notes.md  evals_test.ipynb
notebooks/rag_testing/: rag-testing-history.ipynb  rag-testing.ipynb
