[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
]
